# sdl-media-sink

./: CMakeLists.txt  README.md  sdl_media_sink.c  sdl_media_sink.h
example/: CMakeLists.txt  main.c
